opam-version: "1.2"
name: "polyline_simplification"
version: "0.1"
maintainer: "Matthieu Dubuget <matthieu.dubuget@gmail.com"
authors: ["Matthieu Dubuget <matthieu.dubuget@gmail.com"]
homepage: "https://github.com/ttamttam/polyline_simplification"
bug-reports: "https://github.com/ttamttam/polyline_simplification/issues"
license: "ISC"
depends: ["batteries" "gg"]
build: [["jbuilder" "build" "-p" name "-j" jobs]]
