opam-version: "2.0"
name: "polyline_simplification"
synopsis: "Tail recursive implementation of Ramer-Douglas-Peucker algorithm for polylines simplification"
version: "2019-01-02-1"
maintainer: "Matthieu Dubuget <matthieu.dubuget@gmail.com"
authors: ["Matthieu Dubuget <matthieu.dubuget@gmail.com"]
homepage: "https://github.com/ttamttam/polyline_simplification"
bug-reports: "https://github.com/ttamttam/polyline_simplification/issues"
license: "ISC"
depends: ["batteries"
          "dune" {build}]
build: [["dune" "build" "-p" name "-j" jobs]]
